# Drawing-Robot-Driver

./: .gitignore  CMakeLists.txt  README.md
docs/: Coversheet.docx  RobotPlanningJW_20268056.docx  SystemManualJW_20268056.docx
lib/log/: log.c  log.h
lib/logger/: logger.c  logger.h
src/: file.h  log.c  main.c  test.txt
src/InputFiles/: test.txt
src/InputHandling/: FileHandling.c  FileHandling.h  InputHandling.c  InputHandling.h
src/PenStroke/: PenStroke.h
src/RobotControl/: RobotControl.c  RobotControl.h
src/SerialOutput/: serial.c  serial.h
src/log/: log.c  log.h
testresults/: Result1.txt  Result2.txt  Results3.txt  SpaceGCode.txt  TGCode.txt
tests/: TestMain.c
